<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    >

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="25sp"
        android:elevation="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/itemgred">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/User_img"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:padding="10dp"
                android:src="@drawable/placeholder_ico"
                app:layout_constraintEnd_toStartOf="@+id/User_firstname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/User_firstname"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:text="@string/firstname"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/user_lastname"
                app:layout_constraintStart_toEndOf="@+id/User_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_lastname"
                android:layout_width="50dp"
                android:layout_height="21dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/lastname"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/user_country"
                app:layout_constraintStart_toEndOf="@+id/User_firstname"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_country"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:text="@string/country"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/user_city"
                app:layout_constraintStart_toEndOf="@+id/user_lastname"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_city"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/city"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/user_country"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>